GitHub Pages && TypeScript
First time trying to get TypeScript working directly on GitHub Pages! I hope this works out, as it does actually seem to be really simple to get working. This hopefully means great news for Smart Text Editor and Flatlands too!! :O

--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "private": true,
   "type": "module",
   "browser": "./dist/app.js",
+  "scripts": {
+    "build": "npx tsc"
+  },
   "dependencies": {
     "@stardazed/streams-compression": "^1.0.0",
     "nbtify": "^1.20.1"
