GZIP Mime Types + JSDoc
Realized that I don't think the gzip file mime type is being used for the file type checking, so I removed it from the File Input and File Handling API validations.

Also realized the description for `openFile()` wasn't right.

--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "build": "npx tsc"
+    "build": "npx tsc",
+    "dev": "npx tsc -w"
   },
   "dependencies": {
     "@stardazed/streams-compression": "^1.0.0",
