Improved Compression Polyfill + Build Step
I also did some config adjustments to the project, now it's more structurally sound in terms of the dev setup, and build step. Now devDependencies won't be included in the gh-pages artifact! Originally didn't know that it included the `node_modules` folder for you either, so now that I know that, I can simply load all of my dependencies from the artifact instead of a CDN! Super awesome!

Ideally I want to remove all of the other source-only files from the build artifact, it will require a few extra steps to exclude those though. I think this is probably where a bundler would fit in, hehe. That's still on the list of things to adopt into my projects. I want to make sure I'll be using it right before I break my already semi-working setup here, haha.

Looks like this will work to enable source maps too, which is great for debugging in production! And come to think of it, I think this should also enable source maps for all for all of my dependencies that support them too! Their source maps weren't loading when importing them from JSDelivr for some reason.

*Edit: Looks like it must be a Chrome thing, because they still aren't working! :(

--- a/package.json
+++ b/package.json
@@ -3,15 +3,17 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "build": "npx tsc",
-    "dev": "npx tsc -w"
+    "build": "tsc",
+    "dev": "tsc -w"
   },
   "dependencies": {
-    "@stardazed/streams-compression": "^1.0.0",
+    "compression-streams-polyfill": "^0.1.3",
+    "es-module-shims": "^1.7.2",
     "nbtify": "^1.20.1"
   },
   "devDependencies": {
-    "better-typescript": "^0.1.0",
-    "new-javascript": "^0.3.0"
+    "better-typescript": "^0.1.2",
+    "new-javascript": "^0.3.1",
+    "typescript": "^5.0.4"
   }
 }
