--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -36,6 +36,9 @@ jobs:
       - name: Setup Pages
         uses: actions/configure-pages@v3
 
+      - name: Production dependencies
+        run: npm ci --omit=dev
+
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v1
         with:
