--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -36,13 +36,10 @@ jobs:
       - name: Setup Pages
         uses: actions/configure-pages@v3
 
-      - name: Production dependencies
-        run: npm ci --omit=dev
-
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v1
         with:
-          path: "./"
+          path: "./dist"
 
       - name: Deploy to GitHub Pages
         id: deployment
