--- a/package.json
+++ b/package.json
@@ -3,18 +3,18 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "build": "tsc; vite build --base ./ --target esnext",
-    "dev": "vite --host --port 5500 --base ./",
-    "preview": "vite preview --host --port 5500 --base ./"
+    "build": "tsc; vite build",
+    "dev": "vite",
+    "preview": "vite preview"
   },
   "dependencies": {
-    "compression-streams-polyfill": "^0.1.3",
+    "compression-streams-polyfill": "^0.1.4",
     "nbtify": "^1.35.2"
   },
   "devDependencies": {
-    "better-typescript": "^0.1.2",
-    "new-javascript": "^0.3.1",
-    "typescript": "^5.0.4",
-    "vite": "^4.3.8"
+    "better-typescript": "^0.1.3",
+    "new-javascript": "^0.3.4",
+    "typescript": "^5.1.3",
+    "vite": "^4.3.9"
   }
 }
