--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "nbtify": "^1.60.2"
   },
   "devDependencies": {
+    "@sveltejs/vite-plugin-svelte": "^2.4.2",
     "better-typescript": "^0.1.3",
     "new-javascript": "^0.3.4",
+    "svelte": "^4.0.3",
     "typescript": "^5.1.6",
     "vite": "^4.3.9"
   }
