Svelte: The Deep Dive
Gonna do it. If I'm gonna start using Svelte, I have to start using it first. That's the best way to put it!

Took some of the setup from `npm create vite@latest`, and brought it to here with some changes to fit it into Dovetail's styles and formatting. Not sure about all of the things it changes yet, but I'm gonna have myself not worry about that for the time being, as I think that's what holding me back about it.

Here's to learning new things!

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,22 +1,30 @@
 {
+  "extends": "@tsconfig/svelte/tsconfig.json",
   "compilerOptions": {
     "allowJs": true,
     "checkJs": true,
     "module": "ESNext",
-    "moduleResolution": "NodeNext",
     "isolatedModules": true,
+    "resolveJsonModule": true,
     "target": "ESNext",
     "types": [
       "new-javascript"
     ],
     "noEmit": true,
-    "skipLibCheck": true,
     "strict": true,
     "noImplicitOverride": true,
     "noPropertyAccessFromIndexSignature": true,
     "noUncheckedIndexedAccess": true
   },
-  "exclude": [
-    "./dist"
+  "include": [
+    "src/**/*.d.ts",
+    "src/**/*.ts",
+    "src/**/*.js",
+    "src/**/*.svelte"
+  ],
+  "references": [
+    {
+      "path": "./tsconfig.node.json"
+    }
   ]
 }
