--- a/package.json
+++ b/package.json
@@ -5,15 +5,21 @@
   "scripts": {
     "build": "tsc; vite build",
     "dev": "vite",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "check": "svelte-check --tsconfig ./tsconfig.json"
   },
   "dependencies": {
     "compression-streams-polyfill": "^0.1.4",
     "nbtify": "^1.68.0"
   },
   "devDependencies": {
+    "@sveltejs/vite-plugin-svelte": "^2.4.5",
+    "@tsconfig/svelte": "^5.0.0",
     "better-typescript": "^0.1.6",
     "new-javascript": "^0.3.5",
+    "svelte": "^4.2.0",
+    "svelte-check": "^3.5.0",
+    "tslib": "^2.6.1",
     "typescript": "^5.1.6",
     "vite": "^4.4.9"
   }
