Component Learning: Header
Trying to wrap my head around how you're supposed to structure the state of your app using components, I keep getting stuck trying to pass data up and down out of components, when I have a hunch it's only supposed to go from the top-down?

https://stackoverflow.com/questions/70469476/whats-the-equivalent-of-useref-in-svelte (helpful for element references)

From my discussion with HoldYourWaffle about my confusion:

Ok I'm finding out what else I have trouble with in component-based UI structures
It's deciding where I should place my interaction code, like what components should contain them
(`function saveFile`, `Header.svelte`, `saver.addEventListener`)

So the new Svelte code above is what would replace this event listener
My mix up is whether this save handling code should go in the `Header` component, which is where the save button currently is, or go up a level to the `App` component
How do you import values from other components to use them?
Maybe it's that the state shouldn't be centralized to components like I want them to be, but maybe it has to come from the top-down instead?
Because to get the options from the `FormatDialog` component (once I make that), then I have to get the value out of that component somehow, so the Header can use it for the save handling function here
So is my design flaw that the state should instead just be at the top of the app, and each of the elements can just use those as props?
Then it feels counterintuitive to the component nature that Svelte is trying to employ, because I'm just essentially pushing everything up to the 'global' component, which then just passes all the state down as props; that feels more overboard to me for some reason?
I'd think if it's a component, it holds it's own state right?
How do components interact with other components?
I think this is probably just my brain thinking of it the wrong way, it probably should work the top-down way, just like how dependency injection works 

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,9 @@
     "resolveJsonModule": true,
     "target": "ESNext",
     "types": [
-      "new-javascript"
+      "new-javascript",
+      "svelte",
+      "vite/client"
     ],
     "noEmit": true,
     "strict": true,
