--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,19 +1,16 @@
 {
-  "extends": "@tsconfig/svelte/tsconfig.json",
   "compilerOptions": {
-    "allowJs": true,
-    "checkJs": true,
     "module": "NodeNext",
-    "moduleResolution": "NodeNext",
-    "isolatedModules": true,
-    "resolveJsonModule": true,
     "target": "ESNext",
+    "isolatedModules": true,
+    "verbatimModuleSyntax": true,
     "types": [
-      "new-javascript",
+      "vite/client",
       "svelte",
-      "vite/client"
+      "new-javascript"
     ],
     "noEmit": true,
+    "sourceMap": true,
     "strict": true,
     "noImplicitOverride": true,
     "noPropertyAccessFromIndexSignature": true,
@@ -21,16 +18,5 @@
     "allowUnreachableCode": false,
     "noUnusedLocals": true,
     "noUnusedParameters": true
-  },
-  "include": [
-    "src/**/*.d.ts",
-    "src/**/*.ts",
-    "src/**/*.js",
-    "src/**/*.svelte"
-  ],
-  "references": [
-    {
-      "path": "./tsconfig.node.json"
-    }
-  ]
+  }
 }
