--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "devDependencies": {
     "better-typescript": "^0.1.7",
     "new-javascript": "^0.3.9",
+    "sass": "^1.69.5",
     "typescript": "^5.2.2",
     "vite": "^4.5.0"
   }
