--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
   },
   "dependencies": {
     "compression-streams-polyfill": "^0.1.6",
-    "nbtify": "^1.85.0"
+    "nbtify": "^1.85.0",
+    "solid-js": "^1.8.11"
   },
   "devDependencies": {
     "new-javascript": "^0.4.2",
     "sass": "^1.70.0",
     "typescript": "^5.3.3",
-    "vite": "^5.0.12"
+    "vite": "^5.0.12",
+    "vite-plugin-solid": "^2.8.3"
   }
 }
