Narrowed Experimental Types
Removed the extra types defined from "new-javascript", which I don't currently use. Now I am going to only define the lib features I use with the `types` TSConfig option.

Another alternative is to use the <reference> directive, possibly from my `global.d.ts` file, I'm not sure which I would like to do yet, though.

I also think I still want to properly type out the differences between my Service Worker code, and my regular module code. Right now, the directives cross between eachother, even though they are isolated modules. It seems to be because they are all under the same TSConfig. I kind of wanted to avoid needing to have multiple src folders or TSConfig files, but I also want the most accurate type checking experience for each module's environment. I don't want to accidentally try referencing `window` or `document` from inside my Service Worker for example.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,9 @@
     "jsx": "preserve",
     "jsxImportSource": "solid-js",
     "types": [
-      "new-javascript",
+      "new-javascript/wicg/file-system-access",
+      "new-javascript/wicg/ua-client-hints",
+      "new-javascript/wicg/web-app-launch",
       "vite/client"
     ],
     "noEmit": true,
