--- a/src/service-worker/tsconfig.json
+++ b/src/service-worker/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "extends": "../../tsconfig.json",
   "compilerOptions": {
+    "module": "None",
     "lib": [
       "ESNext",
       "WebWorker"
