--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@solid-codemirror/codemirror": "^1.0.4",
     "compression-streams-polyfill": "^0.1.6",
     "nbtify": "^1.85.0",
     "solid-js": "^1.8.12"
