Components to React Demo!
Trying out seeing how close the current codebase is at using React. It's very close, it works really well! There's still some state dependency management that I haven't debugged yet, but a lot of everything works great.

The NBT tree view has some errors with recursive state calls, and running the demo `bigtest.nbt` file also causes a state loop. Wait, just realized while writing this why that is, lol. Gonna write a fix for that now!

Well, I think it's a lot more to fix than I thought. The concept of multi-running components is the issue, like needing to use `useEffect()` and `useCallback()`.

https://stackoverflow.com/questions/59112809/react-usestate-hook-causing-infinite-loop
https://stackoverflow.com/questions/55384977/npm-install-removes-dev-true-from-several-packages-in-package-lock-json

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,8 +3,7 @@
     "module": "NodeNext",
     "target": "ESNext",
     "isolatedModules": true,
-    "jsx": "preserve",
-    "jsxImportSource": "solid-js",
+    "jsx": "react-jsx",
     "types": [
       "new-javascript/wicg/file-system-access",
       "new-javascript/wicg/ua-client-hints",
