--- a/package.json
+++ b/package.json
@@ -8,15 +8,18 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@vitejs/plugin-react": "^4.2.1",
     "compression-streams-polyfill": "^0.1.6",
     "nbtify": "^1.85.0",
-    "solid-js": "^1.8.12"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@types/react": "^18.2.55",
+    "@types/react-dom": "^18.2.19",
     "new-javascript": "^0.4.2",
     "sass": "^1.70.0",
     "typescript": "^5.3.3",
-    "vite": "^5.0.12",
-    "vite-plugin-solid": "^2.9.1"
+    "vite": "^5.0.12"
   }
 }
