App Package Versioning
Brought this over from my other projects, Flatlands for sure (I don't remember if I did it for STE yet). It makes it easier for versioning because it only has to be changed in one place.

--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "dovetail",
+  "version": "3.0.0",
   "private": true,
   "type": "module",
   "scripts": {
-    "build": "tsc; vite build",
+    "build": "tsc && tsc --project ./src/service-worker/tsconfig.json && vite build",
     "dev": "vite",
     "preview": "vite preview"
   },
